--- a/src/main/client/src/app/pages/hero-detail/hero-detail.component.css
+++ b/src/main/client/src/app/pages/hero-detail/hero-detail.component.css
@@ -4,26 +4,31 @@ label {
     margin: .5em 0;
     color: #607D8B;
     font-weight: bold;
-  }
-  input {
+}
+
+input {
     height: 2em;
     font-size: 1em;
     padding-left: .4em;
-  }
-  button {
+}
+
+button {
     margin-top: 20px;
     font-family: Arial;
     background-color: #eee;
     border: none;
     padding: 5px 10px;
     border-radius: 4px;
-    cursor: pointer; cursor: hand;
-  }
-  button:hover {
+    cursor: pointer;
+    cursor: hand;
+}
+
+button:hover {
     background-color: #cfd8dc;
-  }
-  button:disabled {
+}
+
+button:disabled {
     background-color: #eee;
-    color: #ccc; 
+    color: #ccc;
     cursor: auto;
-  }
+}
